test/expected/explain_sudc_i.out
explain static operator int()
             ^
14: error: user-defined conversion operators can not be static
